system/test-vs-workspace/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-vs-workspace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - host: &host workspace.osucyber.club
      http:
        paths:
          - path: /abc/(.*)
            pathType: Prefix
            backend:
              service:
                name: test-vs-workspace
                port:
                  name: http
  tls:
    - secretName: test-vs-workspace-tls-certificate
      hosts:
        - *host
